--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css" type="text/css">
+    <script src="script.js" async></script>
     <title>Christmas Concentration</title>
   
 </head>
@@ -17,14 +18,14 @@
         GAME OVER 
             <span class="overlay-text-small">Click to Restart</span>
     </div>
-    <div id="you-win-text" class="overlay-text">
+    <div id="victory-text" class="overlay-text">
         YOU WIN 
             <span class="overlay-text-small">Click to Restart</span>
     </div>
     <div class="game-container">
         <div class="game-info-container">
             <div class="game-info">
-                Time <span id="time-left">100</span>
+                Time <span id="time-left">60</span>
             </div>
              <div class="game-info">
                 Flips <span id="flips">0</span>
